--- a/fly.toml
+++ b/fly.toml
@@ -1,26 +1,43 @@
-# fly.toml app configuration file generated for bmvpkenya on 2023-06-08T13:06:31+03:00
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
+# fly.toml file generated for bmvp on 2023-04-09T16:06:58+02:00
 
 app = "bmvpkenya"
-primary_region = "sin"
 kill_signal = "SIGTERM"
+kill_timeout = 5
+primary_region = "ams"
+processes = []
 
 [deploy]
   release_command = "/app/bin/migrate"
 
 [env]
-  PHX_HOST = "bmvpkenya.fly.dev"
+  PHX_HOST = "bmvp.fly.dev"
   PORT = "8080"
 
-[http_service]
+[experimental]
+  auto_rollback = true
+
+[[services]]
+  http_checks = []
   internal_port = 8080
-  force_https = true
-  auto_stop_machines = true
-  auto_start_machines = true
-  min_machines_running = 0
-  [http_service.concurrency]
-    type = "connections"
+  processes = ["app"]
+  protocol = "tcp"
+  script_checks = []
+  [services.concurrency]
     hard_limit = 1000
     soft_limit = 1000
+    type = "connections"
+
+  [[services.ports]]
+    force_https = true
+    handlers = ["http"]
+    port = 80
+
+  [[services.ports]]
+    handlers = ["tls", "http"]
+    port = 443
+
+  [[services.tcp_checks]]
+    grace_period = "1s"
+    interval = "15s"
+    restart_limit = 0
+    timeout = "2s"
